placeholder plugin changes reverted

--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
@@ -114,7 +114,7 @@
                     <label class="control-label col-sm-2">{{agile_lng_translate 'other' 'message-new'}} </label>
                     <div class="controls col-sm-8 email-editor-custom-scroll-bar">
                         <div id="loading-editor"></div>
-                        <textarea class="form-control required" name="message" id="email-body" placeholder="{{agile_lng_translate 'other' 'write-here'}}" style="width: 75%; height: 300px; display: none;"></textarea>
+                        <textarea class="form-control required" name="message" id="email-body" placeholder="{{agile_lng_translate 'other' 'description'}}" style="width: 75%; height: 300px; display: none;"></textarea>
                     </div>
                 </div>   
                 
