--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-smtp-prefs.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-smtp-prefs.html
@@ -42,8 +42,8 @@
                 </div>
             </div>
              <div class="control-group form-group">
-                <label class="control-label">Per day email limit 
-                <span style=" color: grey;"> <img border="0" src="//doxhze3l6s7v9.cloudfront.net/beta/static//img/help.png" style="height: 8px;vertical-align: top; position: relative;left: -5px;" rel="popover" data-placement="right" data-title:"="" data-content=" Set your per day email limit which is provided by your SMTP email Provider" id="element" data-trigger="hover" "="" data-original-title="" title="">
+                <label class="control-label">Per day limit 
+                <span style=" color: grey;"> <img border="0" src="//doxhze3l6s7v9.cloudfront.net/beta/static//img/help.png" style="height: 8px;vertical-align: top; position: relative;left: -5px;" rel="popover" data-placement="right" data-title:"="" data-content=" Max Number of emails to be sent from Agile. This limit depends on the SMTP mail servers." id="element" data-trigger="hover" "="" data-original-title="" title="">
                </span>
                </label>
                      <div class="controls">
@@ -67,7 +67,7 @@
                 <label class="i-checks i-checks-sm">
                     <input type="checkbox" id="smtp-bulk-email-checked" name="bulk_email" title="Send bulk email"><i></i>Send campaign emails 
                 </label>
-                 <span style=" color: grey;"> <img border="0" src="//doxhze3l6s7v9.cloudfront.net/beta/static//img/help.png" style="height: 8px;vertical-align: top; position: relative;left: -5px;" rel="popover" data-placement="right" data-title:"" data-content=" Your campaign and bulk email aso send through SMPT up to max limit" id="element" data-trigger="hover" "="" data-original-title="" title="">
+                 <span style=" color: grey;"> <img border="0" src="//doxhze3l6s7v9.cloudfront.net/beta/static//img/help.png" style="height: 8px;vertical-align: top; position: relative;left: -5px;" rel="popover" data-placement="right" data-title:"" data-content=" Your campaign and bulk email also send through SMPT up to max limit if from email address is same." id="element" data-trigger="hover" "="" data-original-title="" title="">
                </span>
             </div>
         </div>
