add cc as capital in ticket modal

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html
@@ -89,7 +89,7 @@
             <div class="control-group form-group">
               <div class="row">
                   <div class="control-group col-md-12">
-                      <label class="control-label">{{agile_lng_translate 'contact-details' 'cc'}}</label>
+                      <label class="control-label">{{agile_lng_translate 'other' 'cc'}}</label>
                       <span class="controls">
                         <div class="cc-emails-st">
                           <ul class="cc-emails m-n p-n ccemailul" name="cc_emails">
@@ -114,7 +114,7 @@
                     </span>
                   </div>
                   <div class="control-group col-md-6">
-                      <label class="control-label">{{agile_lng_translate 'contact-details' 'cc'}}</label>
+                      <label class="control-label">{{agile_lng_translate 'other' 'cc'}}</label>
                       <span class="controls">
                         <div class="cc-emails-st">
                           <ul class="cc-emails m-n p-n ccemailul" name="cc_emails">
