compact view changes fixed

--- a/agile-frontend/WebContent/flatfull/tpl/contact-view/contact-view-templates.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-view/contact-view-templates.html
@@ -47,7 +47,7 @@
 	<td class="data taxt-center p-b-none" data="{{id}}" >
 	<div class="overflow-hidden thumb-sm agile-theme-image" style="width:2em;" >
 	{{#if_equals type "COMPANY"}}
-	<img class="img-inital r r-2x pull-left agile-theme-company-image-size" {{getCompanyImage "40" "width:20px;height:20px;"}}/></img>
+	<img class="img-inital r r-2x pull-left agile-theme-company-image-size" style="height:20px;width:20px;" {{getCompanyImage "40"}}/></img>
 	{{else}}
   				<img class="img-inital overflow-hidden thumb-sm r r-2x agile-theme-image-size" style= "height:20px;width:20px;" 
             data-name="{{dataNameAvatar properties 40 1}}" src="{{gravatarurl properties 40 1}}" />
