new block issue

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
@@ -22,7 +22,7 @@
                      </div>
                      <div class="col-md-6 col-sm-6">
                         <div class="logo">
-                           <span class="fa fa-compass fa-4x"></span>
+                           <span class="fa fa-compass" style="font-size: 4em;"></span>
                         </div>
                         <div class="intro">
                            <div class="editContent">
