--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp2.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp2.html
@@ -28,7 +28,7 @@
                      <div class="col-md-4 col-sm-4">
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-rocket fa-lg"></span>
+                              <span class="fa fa-rocket fa-lg" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Ready to use</h2></div>
@@ -37,7 +37,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-files-o fa-lg"></span>
+                              <span class="fa fa-files-o fa-lg" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Multiple variations</h2></div>
@@ -46,7 +46,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-bar-chart-o fa-lg"></span>
+                              <span class="fa fa-bar-chart-o fa-lg" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Organic SEO</h2></div>
@@ -55,14 +55,14 @@
                         </figure>
                      </div>
                      <div class="col-md-4 col-sm-4">
-                        <div class="iphone-1">
+                        <div class="iphone-1 text-center">
                            <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp3img.png" alt="">
                         </div>
                      </div>
                      <div class="col-md-4 col-sm-4">
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-user fa-lg"></span>
+                              <span class="fa fa-user fa-lg" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Amazing support</h2></div>
@@ -71,7 +71,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-mobile fa-lg"></span>
+                              <span class="fa fa-mobile fa-lg" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Responsive design</h2></div>
@@ -80,7 +80,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-code fa-lg"></span>
+                              <span class="fa fa-code fa-lg" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>User-friendly codes</h2></div>
