--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
@@ -25,11 +25,11 @@
                      <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
-                              <span class="fa fa-line-chart fa-2x"></span>
+                              <span class="fa fa-line-chart " style="font-size:2em;"></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Unique Design</h4> </div>
-                              <div class="editContent">Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</div>
+                              <div class="editContent"><p>Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</p></div>
                            </div>
                         </div>
                      </div>
@@ -38,11 +38,11 @@
                      <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
-                              <span class="fa fa-tablet fa-2x"></span>
+                              <span class="fa fa-tablet " style="font-size:2em;"></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Full Responsive</h4> </div>
-                               <div class="editContent">Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</div>
+                               <div class="editContent"><p>Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</p></div>
                            </div>
                         </div>
                      </div>
@@ -51,24 +51,26 @@
                      <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
-                              <span class="fa fa-2x fa-rss" ></span>
+                              <span class="fa " style="font-size:2em; fa-rss" ></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Raise your convetions </h4> </div>
-                               <div class="editContent">Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</div>
+                               <div class="editContent"><p>Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</p></div>
                            </div>
                         </div>
                      </div>
                   </div>
+               </div>
+               <div class="row">
                   <div class="col-md-4 col-sm-6">
                      <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
-                              <span class="fa fa-share-alt fa-2x"></span>
+                              <span class="fa fa-share-alt " style="font-size:2em;"></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Theme Builder</h4> </div>
-                               <div class="editContent">Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</div>
+                               <div class="editContent"><p>Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</p></div>
                            </div>
                         </div>
                      </div>
@@ -77,11 +79,11 @@
                      <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
-                              <span class="fa fa-cog fa-2x"></span>
+                              <span class="fa fa-cog " style="font-size:2em;"></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Easy Customizable</h4> </div>
-                               <div class="editContent">Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</div>
+                               <div class="editContent"><p>Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</p></div>
                            </div>
                         </div>
                      </div>
@@ -90,11 +92,11 @@
                      <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
-                              <span class="fa fa-sign-in fa-2x"></span>
+                              <span class="fa fa-sign-in " style="font-size:2em;"></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Morbi congue consectur</h4> </div>
-                               <div class="editContent">Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</div>
+                               <div class="editContent"><p>Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</p></div>
                            </div>
                         </div>
                      </div>
