--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp5.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp5.html
@@ -25,7 +25,7 @@
                      <div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                               <div class="col-xs-12">
-                              <div class="blockquote editContent"><p style="font-size: 13px;">Contrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</p></div>
+                              <div class="arrow-div"></div><div class="blockquote editContent"><p style="font-size: 13px;">Contrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</p></div>
                            </div>
                         </div>
                         <div class="row">
@@ -43,7 +43,7 @@
                      <div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-12">
-                              <div class="blockquote editContent"><p style="font-size: 13px;">Contrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</p></div>
+                              <div class="arrow-div"></div><div class="blockquote editContent"><p style="font-size: 13px;">Contrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</p></div>
                            </div>
                         </div>
                         <div class="row">
@@ -61,7 +61,7 @@
                      <div class="single-testimonial animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-12">
-                              <div class="blockquote editContent"><p style="font-size: 13px;">Contrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</p></div>
+                              <div class="arrow-div"></div><div class="blockquote editContent"><p style="font-size: 13px;">Contrary to popular belief, Lorem Ipsuis no simply random text. It has roots in a piece of classical Layears old. belief, Lorem Ipsuis not simply</p></div>
                            </div>
                         </div>
                         <div class="row">
