--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
@@ -25,7 +25,7 @@
                      <!-- Testimonial Box -->
                      <div class="col-md-6">
                         <div class="quote col-sm-12">
-                           <div class="blue-arrow"></div>
+                           <div class="blue-arrow arrow-div"></div>
                             <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
                         </div>
                         <div class="client_area col-xs-12">
@@ -38,7 +38,7 @@
                      <!-- Testimonial Box -->
                      <div class="col-md-6">
                         <div class="quote green col-sm-12">
-                           <div class="green-arrow"></div>
+                           <div class="green-arrow arrow-div"></div>
                             <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
                         </div>
                         <div class="client_area col-xs-12">
