--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
@@ -17,7 +17,7 @@
                   <div class="row">
                      <div class="col-md-6 col-sm-6">
                         <div class="logo">
-                           <span class="fa fa-compass fa-4x"></span>
+                           <span class="fa fa-compass" style="font-size: 4em;"></span>
                         </div>
                         <div class="intro">
                            <div class="editContent">
