--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
@@ -29,7 +29,7 @@
                      ">
                      <div class="row">
                         <div class="col-xs-3 text-center">
-                           <span class="fa fa-line-chart fa-2x"></span>
+                           <span class="fa fa-line-chart " style="font-size:2em;"></span>
                         </div>
                         <div class=" col-xs-9 half-gutter">
                            <div style="" class=" editContent ">
@@ -47,7 +47,7 @@
                      ">
                      <div class="row">
                         <div class="col-xs-3 text-center">
-                           <span class="fa fa-comment fa-2x"></span>
+                           <span class="fa fa-comment " style="font-size:2em;"></span>
                         </div>
                        <div class=" col-xs-9 half-gutter">
                            <div style="" class=" editContent ">
