android calling text message changed

--- a/agile-frontend/WebContent/flatfull/tpl/widget/android/android-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/android/android-profile.html
@@ -1,6 +1,6 @@
 <script id="android-login-template" type="text/html">	
 	<div>
-		App Calling makes you to contact your customer through Outbound and Inbound calls.
+		Make Outbound calls through your own mobile using Agile CRM mobile app.
 		<div class="m-t-md  m-b-xs text-center">
 			{{#if id}}			
 				<a class="btn btn-sm btn-danger deleteWidget" widget-name="Android" widget-displayname="Android">Delete</a>
