block issue fix

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
@@ -51,7 +51,7 @@
                      <div class="single-service animate_fade_in" style="opacity: 1; right: 0px;">
                         <div class="row">
                            <div class="col-xs-3 text-center half-gutter">
-                              <span class="fa " style="font-size:2em; fa-rss" ></span>
+                              <span class="fa fa-rss" style="font-size:2em;" ></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
                               <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Raise your convetions </h4> </div>
