changed the deployment files

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-advanced.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-advanced.html
@@ -44,9 +44,10 @@
                         <div class="controls col-sm-8">
                             <select name="language" id="language" class="form-control">
                                 <option value="en">English</option>
-                                <option value="es">{{agile_lng_translate 'prefs-settings' 'spanish'}}</option>
-                                <option value="rs">{{agile_lng_translate 'prefs-settings' 'russian'}}</option>
-                                <option value="it">{{agile_lng_translate 'prefs-settings' 'italian'}}</option>
+                                <option value="es">Español</option>
+                                <option value="it">Italiano</option>
+                                <option value="ru">русский</option>
+                                <option value="fr">Français</option>
                             </select>
                         </div>
                     </div>
