icon issue in newtemp2

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp2.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp2.html
@@ -28,7 +28,7 @@
                      <div class="col-md-4 col-sm-4">
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-rocket fa-lg" style="margin-top: 15px;"></span>
+                              <span class="fa fa-rocket lg-fa" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Ready to use</h2></div>
@@ -37,7 +37,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-files-o fa-lg" style="margin-top: 15px;"></span>
+                              <span class="fa fa-files-o lg-fa" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Multiple variations</h2></div>
@@ -46,7 +46,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-bar-chart-o fa-lg" style="margin-top: 15px;"></span>
+                              <span class="fa fa-bar-chart-o lg-fa" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Organic SEO</h2></div>
@@ -62,7 +62,7 @@
                      <div class="col-md-4 col-sm-4">
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-user fa-lg" style="margin-top: 15px;"></span>
+                              <span class="fa fa-user lg-fa" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Amazing support</h2></div>
@@ -71,7 +71,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-mobile fa-lg" style="margin-top: 15px;"></span>
+                              <span class="fa fa-mobile lg-fa" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>Responsive design</h2></div>
@@ -80,7 +80,7 @@
                         </figure>
                         <figure class="items" >
                            <div class="item-icon">
-                              <span class="fa fa-code fa-lg" style="margin-top: 15px;"></span>
+                              <span class="fa fa-code lg-fa" style="margin-top: 15px;"></span>
                            </div>
                            <div class="item-body">
                               <div class="editContent"> <h2>User-friendly codes</h2></div>
