--- a/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
@@ -17,7 +17,7 @@
 			{{else}}
 			<!--<div class="pull-left" valign="middle"><h4 class="h4 m-t-xs" id="contentLeftLabel">To :</h4></div> -->
 			<div class="pull-left" style="width: 100%;" >
-       <label>Inbound Number</label>
+       <label>User Numbers</label>
 				<select name="number" id="contact_number" class="required form-control" style="width: 100%;">
 					{{#each to}}
 						<option value="{{value}}">{{value}} 
