--- a/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/twilioio/twilioio-profile.html
@@ -13,11 +13,12 @@
         </select>
     </div> 
   </div>
+  <hr style="margin-bottom: 9px;">
 			{{#if_equals to.length "1"}}<div><!-- <input type="hidden" id="contact_number" value="{{to.0.value}}"/>Call {{getCurrentContactProperty "first_name"}} {{getCurrentContactProperty "last_name"}} on {{to.0.value}} --></div>
 			{{else}}
 			<!--<div class="pull-left" valign="middle"><h4 class="h4 m-t-xs" id="contentLeftLabel">To :</h4></div> -->
 			<div class="pull-left" style="width: 100%;" >
-       <label>User Numbers</label>
+       <label>Contact Numbers</label>
 				<select name="number" id="contact_number" class="required form-control" style="width: 100%;">
 					{{#each to}}
 						<option value="{{value}}">{{value}} 
