added the keys html

--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-details-block.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-details-block.html
@@ -796,7 +796,7 @@ class="icon-plus"></i> <span >{{agile_lng_translate 'contact-details' 'add'}}</s
 								</button>
 								<ul class="dropdown-menu pull-right text-sm" role="menu">
                                    <li><a href='#contact-edit'>
-                                     <div class="pull-left"><i class="fa fa-edit"></i> Edit</div> {{#if_keyboard_shortcuts_enabled}}
+                                     <div class="pull-left"><i class="fa fa-edit"></i> {{agile_lng_translate 'contact-details' 'edit'}}</div> {{#if_keyboard_shortcuts_enabled}}
                                      <div class='shortcuts pull-right'>Shift + E</div>
                                      {{/if_keyboard_shortcuts_enabled}}
                                      <div class="clearfix"></div>
