--- a/agile-frontend/WebContent/flatfull/tpl/contact-view/contacts-grid-view.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-view/contacts-grid-view.html
@@ -32,11 +32,11 @@
 						<div class="pull-right grid-view-actions grid-view-action-button">
 							<span class="m-r-xs c-p">
 								<a href="#contact/{{id}}">
-									<i data-toggle="tooltip" data-placement="left" title="" data-original-title="Edit" class="fa fa-pencil-square grid-edit-color"></i>
+									<i data-toggle="tooltip" data-placement="left" title="" data-original-title="{{agile_lng_translate 'contact-details' 'edit'}" class="fa fa-pencil-square grid-edit-color"></i>
 								</a>
 							</span>
 							<span class='c-p' con_id="{{id}}" id="contact-actions-grid-delete">
-								<i data-toggle="tooltip" data-placement="left" title="" data-original-title="Delete" class="fa fa-trash grid-delete-color"></i>
+								<i data-toggle="tooltip" data-placement="left" title="" data-original-title="{{agile_lng_translate 'contact-details' 'delete'}}" class="fa fa-trash grid-delete-color"></i>
 							</span>
 						</div>
 					</div>
