--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-email-prefs.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-email-prefs.html
@@ -15,10 +15,10 @@
 		<div class="tab-container m-b-none">
 			<ul class="nav nav-tabs">
 				<li class="active">
-					<a href="#imap-tab" data-toggle="tab" class="b-l-none">Inbound</a>
+					<a href="#imap-tab" data-toggle="tab" class="b-l-none">{{agile_lng_translate 'widjets' 'inbound'}} </a>
 				</li>
 				<li>
-					<a href="#smtp-tab" data-toggle="tab">Outbound</a>
+					<a href="#smtp-tab" data-toggle="tab">{{agile_lng_translate 'widjets' 'outbound'}}</a>
 				</li>
 			</ul>
 		</div>
